<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_barca"
    tools:context=".Fragments.GameFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_back_arrow"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp" />

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo_eva"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_eva" />

        <TextView
            android:id="@+id/icon_x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" X "
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@color/EVA_primary_variant"
            android:fontFamily="@font/reenie_beanie"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />

        <ImageView
            android:id="@+id/logo_fcb"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/logo_fcb" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/game_canvas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/game_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/game_image_placeholder"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_layout"
        app:layout_constraintVertical_bias="0.591" />



    <LinearLayout
        android:id="@+id/end_game_bubble"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@drawable/rounded_white_background"
        android:padding="24dp"
        android:visibility="gone"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/end_game_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/EVA_primary_variant"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/end_game_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score: 0"
            android:textSize="16sp"
            android:textColor="@color/EVA_primary_variant"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/btn_enter_raffle"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/raffle_inscription_button"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
